# FO4-Remix

./: .gitignore  CMakeLists.txt  FO4RemixPlugin.ini  KNOWLEDGEBASE.md  README.md  RELEASE_NOTES_v0.0.4.md  build.bat
scripts/: dynamic_trishape_desc.md  merge_partition_research.md  thread_snapshot.py  winddiag_nif_groundtruth.md
src/: bcdec_bc7.h  bs_extraction.cpp  bs_extraction.h  camera.cpp  camera.h  config.cpp  config.h  crash_diag.cpp  crash_diag.h  draw_capture.cpp  draw_capture.h  f4se_compat.h  fo4_diagnostics.cpp  fo4_diagnostics.h  fo4_tracy.h  hzb_occlusion.cpp  hzb_occlusion.h  light_extractor.cpp  light_extractor.h  main.cpp  phase0_smoke_hook.cpp  phase0_smoke_hook.h  present_hook.cpp  present_hook.h  raster_suppress.cpp  raster_suppress.h  remix_api.cpp  remix_api.h  remix_renderer.cpp  remix_renderer.h  scene_extractor.cpp  scene_extractor.h  semantic_capture.cpp  semantic_capture.h  skinned_meshes.cpp  skinned_meshes.h  skinning.cpp  skinning.h  startup_diag.cpp  startup_diag.h  (+5 more)
src/resolvers/: lighting_static.cpp  lighting_static.h  water.cpp  water.h
